# rust-workshop-server

./: Cargo.toml
src/: endpoints.rs  main.rs
