[package]
name = "simple_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
tokio = {version = "1", features = ["full"]}
tracing-actix-web = "0.5.0-beta.3"
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
color-eyre = "0.5"
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99"
reqwest = "0.11"